Added set reporting, and resolving reports for admins. Added notifications for all users, currently used to notify about report statuses. Gave admin options to access private sets.

--- a/Views/Cards/Category.cshtml
+++ b/Views/Cards/Category.cshtml
@@ -5,9 +5,9 @@
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item" aria-current="page">
-					<a class="text-info" asp-action="Sets" asp-route-page="1" asp-route-name="@Model.Filters.Name"
-						asp-route-numberOfCards="@Model.Filters.NumberOfCards" asp-route-author="@Model.Filters.Author"
-						asp-route-sort="@Model.Filters.SortBy">
+					<a class="text-info" asp-action="Sets" asp-route-page="1" asp-route-Name="@Model.Filters.Name"
+						asp-route-Author="@Model.Filters.Author" asp-route-NumberOfCards="@Model.Filters.NumberOfCards"
+						asp-route-Sort="@Model.Filters.SortBy">
 						Sets
 					</a>
 				</li>
@@ -32,9 +32,9 @@
 				@foreach (var category in Model.OtherCategories)
 				{
 					<a class="btn btn-primary different-cat-sub text-light" asp-action="Category"
-					asp-route-categoryName="@category.Name" asp-route-page="1" asp-route-name="@Model.Filters.Name"
-					asp-route-numberOfCards="@Model.Filters.NumberOfCards" asp-route-author="@Model.Filters.Author"
-					asp-route-sort="@Model.Filters.SortBy">
+					asp-route-categoryName="@category.Name" asp-route-page="1" asp-route-Name="@Model.Filters.Name"
+					asp-route-Author="@Model.Filters.Author" asp-route-NumberOfCards="@Model.Filters.NumberOfCards"
+					asp-route-Sort="@Model.Filters.SortBy">
 						@category.Name
 					</a>
 				}
@@ -51,9 +51,8 @@
 				{
 					<a class="btn btn-primary text-light different-cat-sub" asp-action="Subject"
 					asp-route-categoryName="@Model.CardCategory.Name" asp-route-subjectName="@subject.Name"
-					asp-route-page="1" asp-route-name="@Model.Filters.Name"
-					asp-route-numberOfCards="@Model.Filters.NumberOfCards" asp-route-author="@Model.Filters.Author"
-					asp-route-sort="@Model.Filters.SortBy">
+					asp-route-page="1" asp-route-Name="@Model.Filters.Name" asp-route-Author="@Model.Filters.Author"
+					asp-route-NumberOfCards="@Model.Filters.NumberOfCards" asp-route-Sort="@Model.Filters.SortBy">
 						@subject.Name
 					</a>
 				}
@@ -66,6 +65,6 @@
 </div>
 <div class="row mx-3">
 	<partial name="_CardSetList" model="@Model.CardSetListData" />
-	<partial name="_CardSetListPagination" model="@Model.Pagination" />
+	<partial name="_DefaultListPagination" model="@Model.Pagination" />
 </div>
 <partial name="_ModalPreviewCardSet" />
