--- a/Views/Shared/Components/NavCategories/Default.cshtml
+++ b/Views/Shared/Components/NavCategories/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<CardCategory>
 
-<li class="nav-item dropdown d-none d-md-block">
+<li class="nav-item dropdown nav-border-hover py-md-3 d-none d-md-block">
 	<a class="nav-link nav-text text-light dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
 		data-bs-auto-close="outside" aria-expanded="false">
 		Browse sets
