--- a/Views/Shared/_SearchBox.cshtml
+++ b/Views/Shared/_SearchBox.cshtml
@@ -1,3 +1,7 @@
-﻿<form method="get" asp-controller="Cards" asp-action="Sets" asp-route-page="1" class="d-flex search-form" role="search">
-	<input class="form-control me-0" name="name" type="search" placeholder="Search" aria-label="Search">
-</form>
+﻿<li class="py-md-3">
+	<form id="searchBoxForm" method="get" asp-controller="Cards" asp-action="Sets" asp-route-page="1"
+		class="d-flex search-form" role="search">
+		<input id="searchBoxInput" class="form-control me-0" name="name" type="search" placeholder="Search"
+			aria-label="Search">
+	</form>
+</li>
