--- a/Views/Cards/Quiz.cshtml
+++ b/Views/Cards/Quiz.cshtml
@@ -104,7 +104,7 @@
 		@foreach (var q in Model.QuizQuestions)
 		{
 			@(index++)
-			<div class="row mx-0 my-2 text-light term-in-set">
+			<div class="row mx-0 my-2 text-light text-with-bg">
 				<p class="text-secondary px-0 d-flex justify-content-between">
 					<span>Definition</span>
 					<span>@(index)/@Model.QuizQuestions.Count()</span>
