--- a/Views/Shared/Components/HomePage/Default.cshtml
+++ b/Views/Shared/Components/HomePage/Default.cshtml
@@ -1,7 +1,8 @@
 ﻿@model FrontPageCardSetListsViewModel
+
 @if (!User.Identity.IsAuthenticated)
 {
-	<div class="row row-full home-main-bg mb-4">
+	<div class="row mb-4 row-full home-main-bg">
 		<div class="col-12 col-md-8 offset-md-2 d-flex align-items-stretch">
 			<div class="row px-3 text-light d-flex align-items-center">
 				<div class="col-12 col-md-7 col-lg-5">
@@ -20,7 +21,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="row home-why mb-5 mx-0">
+	<div class="row mb-5 mx-0 home-why">
 		<div class="col-12 col-md-10 offset-md-1 d-flex align-items-stretch mb-5 px-0">
 			<div class="row text-light d-flex align-items-center justify-content-center mx-0">
 				<div class="col-11 p-0 col-md-6 pe-md-4 mb-4 mb-md-0">
