--- a/Views/Shared/_CardSetList.cshtml
+++ b/Views/Shared/_CardSetList.cshtml
@@ -11,7 +11,7 @@
 		{
 			<div class="col-xs-10 col-sm-6 col-lg-4 pb-4 d-flex align-items-stretch">
 				<div class="card set-card flex-grow-1">
-					<div class="card-body d-flex flex-column justify-content-between" data-set-id="@cardSet.Id">
+					<div class="card-body rounded-4 d-flex flex-column justify-content-between" data-set-id="@cardSet.Id">
 						<div class="row mb-1">
 							@if (Model.ActionName == "Category" ||
 									Model.ActionName == "Sets" ||
@@ -21,7 +21,8 @@
 									@if (Model.ActionName != "Subject")
 									{
 										<div class="tag-category-@(cardSet.CardSubject.CardCategory != null ?
-										cardSet.CardSubject.CardCategory.Name.Replace(" ","") : Model.CategoryName.Replace(" ",""))">
+										cardSet.CardSubject.CardCategory.Name.Replace(" ","") : Model.CategoryName.Replace(" ",""))
+										rounded-5">
 											<p class="p-0 m-0">
 												@if (Model.ActionName == "Sets")
 												{
@@ -36,7 +37,7 @@
 									}
 									@if (!cardSet.IsPublic)
 									{
-										<div class="tag-private">
+										<div class="tag-private rounded-5">
 											<p class="p-0 m-0">Private</p>
 										</div>
 									}
@@ -47,7 +48,7 @@
 						<div class="row">
 							<div class="col-12 d-flex justify-content-between align-items-center">
 								<p class="m-0 text-light">
-									<a class="text-info list-user-link user-link" asp-route-author="@cardSet.User.Nickname">
+									<a class="text-info list-user-link text-decoration-none" asp-route-author="@cardSet.User.Nickname">
 										<i class="bi bi-person-circle me-1"></i>
 										@if (User.Identity.IsAuthenticated && User.FindFirstValue(ClaimTypes.NameIdentifier) ==
 												@cardSet.UserId)
@@ -60,7 +61,7 @@
 										}
 									</a>
 								</p>
-								<div class="btn-group" role="group" aria-label="Basic example">
+								<div class="btn-group" role="group">
 									<a class="btn btn-secondary previewButton" 
 									data-id="@cardSet.Id"
 									data-title="@cardSet.Name"
@@ -76,7 +77,7 @@
 		}}
 		else {
 			<div class="text-center">
-			<p class="text-light">There are no Flashcard sets matching the query.</p>
+			<p class="text-light">There are no sets matching the filters.</p>
 			</div>
 		}
 	</div>
